<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_activities"
        android:icon="@drawable/icons_game_menu"
        android:title="@string/nav_game" />
    <item
        android:id="@+id/nav_mall"
        android:icon="@drawable/icons_store_menu"
        android:title="@string/nav_store" />
    <item
        android:id="@+id/nav_subject_park"
        android:icon="@drawable/icons_map_menu"
        android:title="@string/nav_map" />
    <item
        android:id="@+id/nav_ticket"
        android:icon="@drawable/icons_ticket_menu"
        android:title="@string/nav_ticket" />
    <item
        android:id="@+id/nav_member"
        android:icon="@drawable/icons_account_menu"
        android:title="@string/nav_account" />
</menu>